# stable-diffusion.cpp

./: README.md  chroma.hpp  conditioner.hpp  diffusion_model.hpp  ggml_extend.hpp  model.cpp  model.h  stable-diffusion.cpp  t5.hpp  vae.hpp
docs/: chroma_implementation_steps.md
examples/: CMakeLists.txt
examples/chroma_test/: CMakeLists.txt  Makefile  main.cpp
examples/linear_layer_test/: CMakeLists.txt  main.cpp
